[package]
name = "reqwest-traits"
description = "Traits for reqwest to allow injecting a custom http client like reqwest_middleware::ClientWithMiddleware"
authors = ["Ernesto Jiménez <erjica@gmail.com>"]
version = "0.2.0"
edition = "2021"
repository = "https://github.com/ernesto-jimenez/reqwest-traits"
license = "MIT"
keywords = ["reqwest", "reqwest_middleware", "traits", "http", "middleware"]
categories = ["web-programming::http-client"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
http = "0.2.9"
reqwest = "0.11.18"
reqwest-middleware = { version = "0.2.2", optional = true }
serde = "1.0.164"

[dev-dependencies]
http-test-server = "2.1.1"
tokio = { version = "1.28.2", features = ["macros"] }

[features]
default = ["reqwest", "reqwest-middleware"]
reqwest = []
reqwest-middleware = ["reqwest", "dep:reqwest-middleware"]
